--- a/Scribe/Components/InfoChildTableViewCell/InfoChildTableViewCell.xib
+++ b/Scribe/Components/InfoChildTableViewCell/InfoChildTableViewCell.xib
@@ -11,15 +11,15 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="InfoChildTableViewCell" id="KGk-i7-Jjw" customClass="InfoChildTableViewCell" customModule="Scribe" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="InfoChildTableViewCell" rowHeight="50" id="KGk-i7-Jjw" customClass="InfoChildTableViewCell" customModule="Scribe" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="JHo-c6-kU1">
-                        <rect key="frame" x="16" y="9" width="26" height="26"/>
+                        <rect key="frame" x="16" y="12" width="26" height="26"/>
                         <color key="tintColor" name="keyChar"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="26" id="bzN-eO-Qw2"/>
@@ -27,7 +27,7 @@
                         </constraints>
                     </imageView>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="chevron.right" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="c3b-Ee-Sjz">
-                        <rect key="frame" x="284" y="13.999999999999998" width="20" height="16.333333333333329"/>
+                        <rect key="frame" x="284" y="17" width="20" height="16.333333333333329"/>
                         <color key="tintColor" name="keyChar"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="20" id="9BB-IF-6aL"/>
@@ -35,7 +35,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XI7-83-3eC">
-                        <rect key="frame" x="58" y="12" width="42" height="21"/>
+                        <rect key="frame" x="58" y="15" width="42" height="21"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="21" id="trX-iS-h3L"/>
                         </constraints>
@@ -44,7 +44,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="FbK-yb-cab">
-                        <rect key="frame" x="255" y="7" width="51" height="31"/>
+                        <rect key="frame" x="255" y="8" width="51" height="34"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="49" id="TLe-pF-eis"/>
                         </constraints>
@@ -52,13 +52,16 @@
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="c3b-Ee-Sjz" secondAttribute="trailing" constant="16" id="1GZ-t8-7QH"/>
-                    <constraint firstItem="FbK-yb-cab" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="7" id="1rb-fC-ZZv"/>
-                    <constraint firstItem="c3b-Ee-Sjz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="CnB-3r-wcQ"/>
-                    <constraint firstAttribute="bottom" secondItem="FbK-yb-cab" secondAttribute="bottom" constant="6" id="IXM-0p-b5C"/>
-                    <constraint firstItem="JHo-c6-kU1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="9" id="LYw-PL-vG3"/>
-                    <constraint firstItem="XI7-83-3eC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="WrK-Cz-jEI"/>
+                    <constraint firstItem="c3b-Ee-Sjz" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="OFN-MG-1LO"/>
+                    <constraint firstAttribute="bottom" secondItem="XI7-83-3eC" secondAttribute="bottom" constant="14" id="R4Y-ld-ZrN"/>
+                    <constraint firstItem="JHo-c6-kU1" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="12" id="ZI3-Hg-4Z0"/>
+                    <constraint firstItem="FbK-yb-cab" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="8" id="co0-nN-Poh"/>
+                    <constraint firstAttribute="bottom" secondItem="FbK-yb-cab" secondAttribute="bottom" constant="8" id="e0D-ba-cEF"/>
                     <constraint firstItem="XI7-83-3eC" firstAttribute="leading" secondItem="JHo-c6-kU1" secondAttribute="trailing" constant="16" id="hea-p2-0IU"/>
+                    <constraint firstAttribute="bottom" secondItem="c3b-Ee-Sjz" secondAttribute="bottom" constant="15" id="iz6-l0-L8h"/>
+                    <constraint firstAttribute="bottom" secondItem="JHo-c6-kU1" secondAttribute="bottom" constant="12" id="jbW-xC-URt"/>
                     <constraint firstAttribute="trailing" secondItem="FbK-yb-cab" secondAttribute="trailing" constant="16" id="kzi-n0-hcA"/>
+                    <constraint firstItem="XI7-83-3eC" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="ngM-8D-Vif"/>
                     <constraint firstItem="JHo-c6-kU1" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="on6-i8-GTD"/>
                 </constraints>
             </tableViewCellContentView>
@@ -69,7 +72,7 @@
                 <outlet property="titleLabel" destination="XI7-83-3eC" id="8Oo-On-CWs"/>
                 <outlet property="toggleSwitch" destination="FbK-yb-cab" id="CYZ-wz-okM"/>
             </connections>
-            <point key="canvasLocation" x="25.954198473282442" y="-12.67605633802817"/>
+            <point key="canvasLocation" x="25.954198473282442" y="-10.563380281690142"/>
         </tableViewCell>
     </objects>
     <resources>
